# rusty_messenger

./: .gitignore  Cargo.toml  README  README.md
api/: .env  Cargo.toml  Rocket.toml
api/src/: auth.rs  cors.rs  database.rs  date_time_sql.rs  db.rs  main.rs  message.rs  room.rs  structs.rs  test_event_source.rs  test_event_stream.rs  tests.rs  user.rs
api/static/: index.html
dev/: Tests fonctionnels.md  Tests fonctionnels.txt
front/: Cargo.toml  Dioxus.toml
front/public/: getStatus.js  reset.css  script.js  style.css
front/src/: account.rs  account_manager.rs  async_state.rs  conv.rs  create_user.rs  event_source.rs  home.rs  login.rs  main.rs  messages.rs  room.rs  side_bar.rs  structs.rs
lib/: Cargo.toml
lib/src/: lib.rs
