[package]
name = "rusty_messenger_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
dotenv = "0.15.0"
rusqlite = { version = "0.29.0", features = ["chrono", "bundled"] }
chrono = "0.4.28"
pwhash = "1.0.0"
rand = "0.8.5"

[dev-dependencies]
json = "0.12.4"