[package]
name = "rusty_messenger_front"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.0"
dioxus-desktop = "0.4.0"
dioxus-liveview = { version = "0.4.0", features = ["axum"] }
dioxus-router = "0.4.0"
dioxus-web = "0.4.0"
reqwest = "0.11.20"
tokio = "1.32.0"
