[package]
name = "rusty_messenger_front"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }
chrono = "0.4.28"
dioxus = "0.4.0"
dioxus-web = "0.4.0"
dioxus-router = "0.4.1"
futures-channel = "0.3.28"
futures-lite = "1.13.0"
json = "0.12.4"
reqwest = "0.11.20"
webview2 = "0.1.4"
async-std = "1.12.0"
web-sys = "0.3.64"
wasm-bindgen = "0.2.87"
